Cleanup build.gradle and bump log4j
Signed-off-by: AterAnimAvis <AterAnimAvis@gmail.com>